
public enum AccessibilityIdentifiers {
    enum HomeView {
        static let selectSourceCurrency = "home_view.select_source_currency"
        static let fromButton = "home_view.from"
        static let toButton = "home_view.to"
        static let convertButton = "home_view.convert"
        static let currencyAmountTextField = "home_view.currency_amount_text_field"
        static let keyboardDone = "home_view.keyboard_done"
    }

    enum SelectCurrencyScreen {
        static let screen = "select_currency.screen"
    }
}
